[metadata]
name = fhir-data-generator
version = 0.0.1
author = adlra
author_email = [email protected]
description = Utility used as an aid for testing of code that use FHIR data sources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adlra/fhir-data-generator
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    click==8.1.3
    fhirclient==4.1.0

[options.packages.find]
where = src